--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <div class="verti">
 <div class="verti1"> 
 
-	<h2 class="vn"><center><span style="color:white"> Registration Page</span></center></h2>
+	<h2 class="vn"><center><span style="color:white"> Registration Form</span></center></h2>
 <input type="text" name="vn" value="" placeholder="Enter name" class="style"><br>
 <input type="email" name="vn" value="" placeholder="Enter email" class="style1"><br>
 <input type="text" name="vn" value="" placeholder="enter no" class="style2"><br>
