--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h2 class="vn"><center><span style="color:white"> Registration Form</span></center></h2>
 <input type="text" name="vn" value="" placeholder="Enter name" class="style"><br>
 <input type="email" name="vn" value="" placeholder="Enter email" class="style1"><br>
-<input type="text" name="vn" value="" placeholder="enter no" class="style2"><br>
+<input type="text" name="vn" value="" placeholder="enter number" class="style2"><br>
 <input type="text" name="vn" value="" placeholder="choose course" class="style3"><br>
 <input type="text" name="d" value="" placeholder="enter your message.." class="style4"><br>
 <button class="bt">Register Now</button>
