--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <input type="email" name="vn" value="" placeholder="Enter email" class="style1"><br>
 <input type="text" name="vn" value="" placeholder="enter number" class="style2"><br>
 <input type="text" name="vn" value="" placeholder="choose course" class="style3"><br>
-<input type="text" name="d" value="" placeholder="Enter your message.." class="style4"><br>
+<input type="text" name="d" value="" placeholder="Enter  message.." class="style4"><br>
 <button class="bt">Register Now</button>
 
 </div>
